--- a/src/lk/ijse/gdse66/hostel/view/manage_reservation_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/manage_reservation_form.fxml
@@ -10,25 +10,22 @@
 
 <AnchorPane fx:id="root" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageReservationFormController">
     <children>
-        <Label focusTraversable="false" layoutX="436.0" layoutY="57.0" text="Reservation">
-            <font>
-                <Font size="25.0" />
-            </font>
-        </Label>
-        <JFXTextField fx:id="txtStudentName" editable="false" focusTraversable="false" layoutX="416.0" layoutY="159.0" promptText="Student Name" />
-        <JFXTextField fx:id="txtContact" editable="false" focusTraversable="false" layoutX="746.0" layoutY="159.0" promptText="Contact" />
-        <JFXTextField fx:id="txtAddress" editable="false" focusTraversable="false" layoutX="98.0" layoutY="249.0" promptText="Address" />
-        <JFXButton fx:id="btnReserve" buttonType="RAISED" focusTraversable="false" layoutX="750.0" layoutY="502.0" onAction="#ReserveOnAction" prefHeight="31.0" prefWidth="169.0" style="-fx-background-color: lightblue;" text="Reserve" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="18.0" layoutY="15.0" onAction="#backOnAction" prefHeight="31.0" prefWidth="79.0" style="-fx-background-color: lightblue;" text="Back" />
-        <JFXTextField fx:id="txtDOB" editable="false" focusTraversable="false" layoutX="416.0" layoutY="249.0" promptText="Date of Birth" />
-        <JFXTextField fx:id="txtGender" editable="false" focusTraversable="false" layoutX="750.0" layoutY="249.0" promptText="Gender" />
-        <JFXComboBox fx:id="cmbStudentId" focusTraversable="false" layoutX="98.0" layoutY="159.0" prefHeight="31.0" prefWidth="169.0" promptText="Student ID" />
-        <JFXComboBox fx:id="cmbRoomId" focusTraversable="false" layoutX="98.0" layoutY="398.0" prefHeight="31.0" prefWidth="169.0" promptText="Room ID" />
-        <Separator focusTraversable="false" layoutX="89.0" layoutY="342.0" prefHeight="0.0" prefWidth="823.0" />
-        <JFXTextField fx:id="txtRoomType" editable="false" focusTraversable="false" layoutX="416.0" layoutY="398.0" prefHeight="31.0" prefWidth="169.0" promptText="Room Type" />
-        <JFXTextField fx:id="txtKeyMoney" editable="false" focusTraversable="false" layoutX="746.0" layoutY="398.0" promptText="Key Money" />
-        <JFXTextField fx:id="txtQty" editable="false" focusTraversable="false" layoutX="98.0" layoutY="502.0" promptText="Quantity" />
-        <JFXTextField fx:id="txtAdvance" focusTraversable="false" layoutX="416.0" layoutY="502.0" promptText="Advance" />
-        <Label fx:id="lblResId" focusTraversable="false" layoutX="843.0" layoutY="64.0" prefHeight="21.0" prefWidth="72.0" text="RES001" />
+        <JFXTextField fx:id="txtStudentName" editable="false" focusTraversable="false" layoutX="416.0" layoutY="135.0" promptText="Student Name" />
+        <JFXTextField fx:id="txtContact" editable="false" focusTraversable="false" layoutX="746.0" layoutY="135.0" promptText="Contact" />
+        <JFXTextField fx:id="txtAddress" editable="false" focusTraversable="false" layoutX="89.0" layoutY="218.0" promptText="Address" />
+        <JFXButton fx:id="btnReserve" buttonType="RAISED" focusTraversable="false" layoutX="746.0" layoutY="494.0" onAction="#ReserveOnAction" prefHeight="31.0" prefWidth="169.0" style="-fx-background-color: lightblue;" text="Reserve" />
+        <JFXTextField fx:id="txtDOB" editable="false" focusTraversable="false" layoutX="416.0" layoutY="218.0" promptText="Date of Birth" />
+        <JFXTextField fx:id="txtGender" editable="false" focusTraversable="false" layoutX="746.0" layoutY="218.0" promptText="Gender" />
+        <JFXComboBox fx:id="cmbStudentId" focusTraversable="false" layoutX="89.0" layoutY="135.0" prefHeight="31.0" prefWidth="169.0" promptText="Student ID" />
+        <JFXComboBox fx:id="cmbRoomId" focusTraversable="false" layoutX="89.0" layoutY="383.0" prefHeight="31.0" prefWidth="169.0" promptText="Room ID" />
+        <Separator focusTraversable="false" layoutX="89.0" layoutY="316.0" prefHeight="0.0" prefWidth="823.0" />
+        <JFXTextField fx:id="txtRoomType" editable="false" focusTraversable="false" layoutX="416.0" layoutY="383.0" prefHeight="31.0" prefWidth="169.0" promptText="Room Type" />
+        <JFXTextField fx:id="txtKeyMoney" editable="false" focusTraversable="false" layoutX="746.0" layoutY="383.0" promptText="Key Money" />
+        <JFXTextField fx:id="txtQty" editable="false" focusTraversable="false" layoutX="89.0" layoutY="494.0" promptText="Quantity" />
+        <JFXTextField fx:id="txtAdvance" focusTraversable="false" layoutX="416.0" layoutY="494.0" promptText="Advance" />
+        <Label fx:id="lblResId" focusTraversable="false" layoutX="89.0" layoutY="34.0" prefHeight="36.0" prefWidth="104.0" text="RES001">
+         <font>
+            <Font size="25.0" />
+         </font></Label>
     </children>
 </AnchorPane>
