--- a/src/lk/ijse/gdse66/hostel/view/manage_user_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/manage_user_form.fxml
@@ -3,29 +3,21 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="696.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageUserFormController">
+<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageUserFormController">
     <children>
-        <Label focusTraversable="false" layoutX="427.0" layoutY="28.0" text="Manage User">
-            <font>
-                <Font size="25.0" />
-            </font>
-        </Label>
-        <JFXTextField fx:id="txtUserId" focusTraversable="false" layoutX="71.0" layoutY="145.0" promptText="User ID" />
-        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="331.0" layoutY="145.0" promptText="User Name" />
-        <JFXTextField fx:id="txtContact" focusTraversable="false" layoutX="331.0" layoutY="221.0" promptText="Contact" />
-        <JFXTextField fx:id="txtAddress" focusTraversable="false" layoutX="71.0" layoutY="221.0" promptText="Address" />
-        <JFXButton fx:id="btnAddNew" buttonType="RAISED" focusTraversable="false" layoutX="850.0" layoutY="96.0" onAction="#addNewOnAction" prefWidth="100.0" style="-fx-background-color: lightblue;" text="+ Add New" />
-        <JFXButton fx:id="btnSave" buttonType="RAISED" focusTraversable="false" layoutX="850.0" layoutY="158.0" onAction="#saveOnAction" prefWidth="100.0" style="-fx-background-color: lightblue;" text="Save" />
-        <JFXButton fx:id="btnDelete" buttonType="RAISED" focusTraversable="false" layoutX="850.0" layoutY="221.0" onAction="#deleteOnAction" prefWidth="100.0" style="-fx-background-color: lightblue;" text="Delete" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="18.0" layoutY="15.0" onAction="#backOnAction" prefWidth="80.0" style="-fx-background-color: lightblue;" text="Back" />
-        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="781.0" layoutY="30.0" onAction="#searchOnAction" promptText="U001" />
-        <TableView focusTraversable="false" layoutX="12.0" layoutY="282.0" prefHeight="400.0" prefWidth="975.0">
+        <JFXTextField fx:id="txtUserId" focusTraversable="false" layoutX="38.0" layoutY="38.0" promptText="User ID" />
+        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="239.0" layoutY="38.0" promptText="User Name" />
+        <JFXTextField fx:id="txtContact" focusTraversable="false" layoutX="239.0" layoutY="112.0" promptText="Contact" />
+        <JFXTextField fx:id="txtAddress" focusTraversable="false" layoutX="38.0" layoutY="112.0" promptText="Address" />
+        <JFXButton fx:id="btnAddNew" buttonType="RAISED" focusTraversable="false" layoutX="828.0" layoutY="38.0" onAction="#addNewOnAction" prefWidth="130.0" style="-fx-background-color: lightblue;" text="+ Add New" />
+        <JFXButton fx:id="btnSave" buttonType="RAISED" focusTraversable="false" layoutX="828.0" layoutY="112.0" onAction="#saveOnAction" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Save" />
+        <JFXButton fx:id="btnDelete" buttonType="RAISED" focusTraversable="false" layoutX="662.0" layoutY="112.0" onAction="#deleteOnAction" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Delete" />
+        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="662.0" layoutY="38.0" onAction="#searchOnAction" prefWidth="130.0" promptText="U001" />
+        <TableView focusTraversable="false" layoutX="12.0" layoutY="183.0" prefHeight="404.0" prefWidth="975.0">
             <columns>
                 <TableColumn editable="false" minWidth="162.0" prefWidth="75.0" resizable="false" text="User ID" />
                 <TableColumn editable="false" minWidth="162.0" prefWidth="75.0" resizable="false" text="User Name" />
@@ -35,7 +27,7 @@
                 <TableColumn editable="false" minWidth="83.0" prefWidth="164.0" resizable="false" text="Password" />
             </columns>
         </TableView>
-        <JFXTextField fx:id="txtPassword" focusTraversable="false" layoutX="609.0" layoutY="221.0" promptText="Password" />
-        <JFXComboBox fx:id="cmbGender" focusTraversable="false" layoutX="609.0" layoutY="145.0" prefHeight="31.0" prefWidth="169.0" promptText="Gender" />
+        <JFXTextField fx:id="txtPassword" focusTraversable="false" layoutX="453.0" layoutY="112.0" promptText="Password" />
+        <JFXComboBox fx:id="cmbGender" focusTraversable="false" layoutX="453.0" layoutY="38.0" prefHeight="31.0" prefWidth="169.0" promptText="Gender" />
     </children>
 </AnchorPane>
