--- a/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
@@ -22,23 +22,23 @@
                 <Font size="23.0" />
             </font>
         </Label>
-        <Label fx:id="lblDate" layoutX="115.0" layoutY="41.0" prefHeight="30.0" prefWidth="116.0" text="2023/08/18">
+        <Label fx:id="lblDate" focusTraversable="false" layoutX="115.0" layoutY="41.0" prefHeight="30.0" prefWidth="116.0" text="2023/08/18">
             <font>
                 <Font size="20.0" />
             </font>
         </Label>
-        <Label fx:id="lblTime" layoutX="1164.0" layoutY="41.0" prefHeight="30.0" prefWidth="102.0" text="08:18 AM">
+        <Label fx:id="lblTime" focusTraversable="false" layoutX="1164.0" layoutY="41.0" prefHeight="30.0" prefWidth="102.0" text="08:18 AM">
             <font>
                 <Font size="20.0" />
             </font>
         </Label>
         <AnchorPane fx:id="root" layoutX="276.0" layoutY="143.0" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: lightgrey;" />
-        <Label layoutX="58.0" layoutY="41.0" text="Date : ">
+        <Label focusTraversable="false" layoutX="58.0" layoutY="41.0" text="Date : ">
             <font>
                 <Font size="20.0" />
             </font>
         </Label>
-        <Label layoutX="1105.0" layoutY="41.0" text="Time : ">
+        <Label focusTraversable="false" layoutX="1105.0" layoutY="41.0" text="Time : ">
             <font>
                 <Font size="20.0" />
             </font>
