Rooms Structure Implemented

--- a/src/lk/ijse/gdse66/hostel/view/manage_rooms_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/manage_rooms_form.fxml
@@ -12,10 +12,10 @@
         <JFXTextField fx:id="txtRoomType" focusTraversable="false" layoutX="359.0" layoutY="47.0" promptText="Room Type" />
         <JFXTextField fx:id="txtKeyMoney" focusTraversable="false" layoutX="82.0" layoutY="121.0" promptText="Key Money" />
         <JFXTextField fx:id="txtQty" focusTraversable="false" layoutX="359.0" layoutY="121.0" promptText="Quantity" />
-        <JFXButton fx:id="btnAddNew" buttonType="RAISED" focusTraversable="false" layoutX="822.0" layoutY="47.0" onAction="#addNewOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="+ Add New" />
-        <JFXButton fx:id="btnSave" buttonType="RAISED" focusTraversable="false" layoutX="822.0" layoutY="121.0" onAction="#saveOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Save" />
-        <JFXButton fx:id="btnDelete" buttonType="RAISED" focusTraversable="false" layoutX="632.0" layoutY="121.0" onAction="#deleteOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Delete" />
-        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="632.0" layoutY="47.0" onAction="#searchOnAction" prefWidth="130.0" promptText="R001" />
+        <JFXButton fx:id="btnAddNew" buttonType="RAISED" focusTraversable="false" layoutX="632.0" layoutY="47.0" onAction="#addNewOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="+ Add New" />
+        <JFXButton fx:id="btnSave" buttonType="RAISED" focusTraversable="false" layoutX="632.0" layoutY="121.0" onAction="#saveOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Save" />
+        <JFXButton fx:id="btnDelete" buttonType="RAISED" focusTraversable="false" layoutX="822.0" layoutY="121.0" onAction="#deleteOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Delete" />
+        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="822.0" layoutY="47.0" onAction="#searchOnAction" prefWidth="130.0" promptText="Search Here" />
         <TableView focusTraversable="false" layoutX="12.0" layoutY="186.0" prefHeight="400.0" prefWidth="976.0">
             <columns>
                 <TableColumn editable="false" minWidth="244.0" prefWidth="75.0" resizable="false" text="Room ID" />
