--- a/src/lk/ijse/gdse66/hostel/view/login_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/login_form.fxml
@@ -9,14 +9,15 @@
 
 <AnchorPane fx:id="root" prefHeight="741.0" prefWidth="1276.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.LoginFormController">
     <children>
-        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="158.0" layoutY="340.0" prefHeight="31.0" prefWidth="311.0" promptText="User Name" />
-        <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="158.0" layoutY="445.0" prefHeight="31.0" prefWidth="311.0" promptText="Password" />
+        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="158.0" layoutY="337.0" prefHeight="31.0" prefWidth="311.0" promptText="User Name" />
+        <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="158.0" layoutY="432.0" prefHeight="31.0" prefWidth="311.0" promptText="Password" />
         <Label focusTraversable="false" layoutX="433.0" layoutY="98.0" text="Hostel Management System">
             <font>
                 <Font size="35.0" />
             </font>
         </Label>
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="158.0" layoutY="567.0" onAction="#loginOnAction" prefHeight="31.0" prefWidth="142.0" style="-fx-background-color: lightblue;" text="Log In" />
-      <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="327.0" layoutY="567.0" onAction="#cancelOnAction" prefHeight="31.0" prefWidth="142.0" style="-fx-background-color: lightblue;" text="Cancel" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="158.0" layoutY="515.0" onAction="#loginOnAction" prefHeight="31.0" prefWidth="142.0" style="-fx-background-color: lightblue;" text="Log In" />
+      <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="327.0" layoutY="515.0" onAction="#cancelOnAction" prefHeight="31.0" prefWidth="142.0" style="-fx-background-color: lightblue;" text="Cancel" />
+      <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="158.0" layoutY="585.0" onAction="#createAccountOnAction" prefHeight="31.0" prefWidth="311.0" style="-fx-background-color: lightblue;" text="Create an Account" />
     </children>
 </AnchorPane>
