--- a/src/lk/ijse/gdse66/hostel/view/manage_keymoney_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/manage_keymoney_form.fxml
@@ -5,18 +5,16 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageKeymoneyFormController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageKeymoneyFormController">
     <children>
-        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="816.0" layoutY="14.0" onAction="#searchOnAction" promptText="RES001" />
-        <TableView focusTraversable="false" layoutX="12.0" layoutY="85.0" prefHeight="501.0" prefWidth="973.0">
+        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="816.0" layoutY="14.0" onAction="#searchOnAction" promptText="Serach Here" />
+        <TableView fx:id="tblReservation" focusTraversable="false" layoutX="12.0" layoutY="85.0" prefHeight="501.0" prefWidth="973.0">
             <columns>
-                <TableColumn editable="false" minWidth="139.0" prefWidth="75.0" resizable="false" text="Reserve ID" />
-                <TableColumn editable="false" minWidth="139.0" prefWidth="75.0" resizable="false" text="Student ID" />
-                <TableColumn editable="false" minWidth="139.0" prefWidth="75.0" resizable="false" text="Room ID" />
-                <TableColumn editable="false" minWidth="139.0" prefWidth="75.0" resizable="false" text="Date" />
-                <TableColumn editable="false" minWidth="139.0" prefWidth="75.0" resizable="false" text="Key Money" />
-                <TableColumn editable="false" minWidth="139.0" prefWidth="75.0" resizable="false" text="Advance" />
-                <TableColumn editable="false" minWidth="129.0" prefWidth="138.0" resizable="false" text="Status" />
+                <TableColumn editable="false" prefWidth="195.0" resizable="false" text="Reserve ID" />
+                <TableColumn editable="false" prefWidth="195.0" resizable="false" text="Student ID" />
+                <TableColumn editable="false" prefWidth="195.0" resizable="false" text="Room ID" />
+                <TableColumn editable="false" prefWidth="195.0" resizable="false" text="Date" />
+                <TableColumn editable="false" prefWidth="191.0" resizable="false" text="Status" />
             </columns>
         </TableView>
     </children>
